# microservices/auth/app/swagger.yml
@@ -87,6 +87,18 @@ definitions:
     title: UserRegister is the body parameter given to register a new user to the database.
     type: object
     x-go-package: github.com/alexandr-io/backend/auth/data
+  authRefresh:
+    properties:
+      refresh_token:
+        description: The refresh token of the user
+        example: eyJhb[...]FYqf4
+        type: string
+        x-go-name: RefreshToken
+    required:
+    - refresh_token
+    title: authRefresh is the body parameter given to /auth/refresh call.
+    type: object
+    x-go-package: github.com/alexandr-io/backend/auth/handlers
   field:
     properties:
       name:
@@ -102,6 +114,25 @@ info:
   title: of User API
   version: 1.0.0
 paths:
+  /auth/refresh:
+    post:
+      description: Get a new auth and refresh token from a valid refresh token
+      operationId: refresh_token
+      parameters:
+      - description: The information to refresh an auth and refresh token
+        in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/authRefresh'
+      responses:
+        "201":
+          $ref: '#/responses/userResponse'
+        "400":
+          $ref: '#/responses/badRequestErrorResponse'
+        "401":
+          $ref: '#/responses/unauthorizedErrorResponse'
+      tags:
+      - AUTH
   /login:
     post:
       description: Login a user and return it's information, auth token and refresh token
@@ -143,6 +174,18 @@ responses:
     description: A bad request error response
     schema:
       $ref: '#/definitions/BadInput'
+  unauthorizedErrorResponse:
+    description: An unauthorized error response
+    schema:
+      properties:
+        error:
+          description: The error message
+          example: Invalid or expired JWT
+          type: string
+          x-go-name: Error
+      required:
+      - error
+      type: object
   userResponse:
     description: User data with auth and refresh token
     schema:
